[gd_scene load_steps=2 format=3 uid="uid://rms505vei5uf"]

[ext_resource type="Script" uid="uid://sj7f6j405va4" path="res://scripts/minigames/bfs_dfs_game/bfs_dfs_ui.gd" id="1_xkbsh"]

[node name="BfsDfsUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkbsh")

[node name="NeutralizeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -57.0
offset_right = 115.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 34
text = "Halla el Vertice Infectado con BFS y DFS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -109.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="NeutralizeButton" to="." method="_on_neutralize_button_pressed"]
